# texto

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
src/: cli.rs  main.rs
src/commands/: decimal.rs  lorem.rs  mod.rs  number.rs  text.rs  uuid.rs
src/data/: mod.rs  word_sets.rs
