[package]
name = "texto"
version = "0.2.0"
edition = "2024"
description = "Texto is a CLI made for generating dummy text."
license = "MIT"
repository = "https://github.com/mylu0x/texto"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
fastrand = "2.3.0"
uuid = { version = "1.23.0", features = ["v4", "v7"] }
